continue builtin function refactor

--- a/src/4_Frame_⚡/2_builtin/file.wrapt.org
+++ b/src/4_Frame_⚡/2_builtin/file.wrapt.org
@@ -3,7 +3,7 @@ import { FunctionObject } from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/ob
 import { BooleanObject, _BuiltinFunctionObject, Hash, StringObject } from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/object/1_0_1_object";
 import { NULL }     from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/object/1_1_object.singleton";
 import { newError } from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/util/3_0_object-util";
-import { _makeBuiltinClass } from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/util/3_builtin_util";
+import { makeBuiltinClass, _makeBuiltinClass } from "wrapt.co_re/lib/Model [╍⬡╍ꙮ╍▦╍]/util/3_builtin_util";
 import { Modifier } from "../../01_1_ELEMENT/1_token_💧/2_1_token";
 import { applyFunction } from "../../10_0_SYSTEM/2_compiler/1_3_jit/2_0_evaluator/2_0_evaluator";
 import { readWholeFile }   from "../../3_Operation_☀/3_util_(🔥)/4_0_io-util";
@@ -28,7 +28,7 @@ const fileConstructor = new _BuiltinFunctionObject(
     ),
 
     fileOpen = new _BuiltinFunctionObject(
-        "open",  [     ], 
+        "open",  [], 
         function (scope) 
         {
             return new BooleanObject(false);
@@ -56,7 +56,7 @@ const fileConstructor = new _BuiltinFunctionObject(
     ),
 
     fileWriteLine = new _BuiltinFunctionObject<FileObject>(
-        "writeLine", [              ObjectType.STRING ], 
+        "writeLine", [ObjectType.STRING], 
         function     (scope: Hash,  line: StringObject) 
         {
             writeLineToFile(scope.Elements.resource.Inspect() + "", line.Inspect(), nodeObjects.fs);
@@ -65,7 +65,7 @@ const fileConstructor = new _BuiltinFunctionObject(
         null, null, true
     ),
 
-    fileReadLine = new BuiltinFunctionObject(
+    fileReadLine = new _BuiltinFunctionObject(
         "readLine", [],
         function    (scope) 
         {
